# NearbyClient

./: .clang-format  .gitignore  .gitmodules  BuildAndConfigure.sh  CMakeLists.txt  GenerateProto.sh  README.md  RunAndBuild.sh
NearbyClient/: CMakeLists.txt
NearbyClient/include/NearbyClient/: Bucket.hpp  Client.hpp  Discovered.hpp  DiscoveredAdvertisements.hpp  DiscoveredEndpointId.hpp  DiscoveredEndpoints.hpp  Main.hpp  NearbyClient.hpp
NearbyClient/include/NearbyClient/Services/: NearbyShare.hpp  Tls.hpp  Variables.hpp
NearbyClient/include/NearbyClient/Services/OAuth/: Authorizer.hpp  Token.hpp
NearbyClient/include/NearbyClient/Utilities/: Curl.hpp  Uri.hpp
NearbyClient/source/: Bucket.cpp  Client.Style.cpp  Client.cpp  Discovered.cpp  DiscoveredAdvertisements.cpp  DiscoveredEndpointId.cpp  DiscoveredEndpoints.cpp  Main.cpp  NearbyClient.cpp
NearbyClient/source/Services/: NearbyShare.cpp  Tls.cpp  Variables.cpp
NearbyClient/source/Services/OAuth/: Authorizer.cpp  Token.cpp
NearbyClient/source/Utilities/: Curl.cpp
NearbyLayers/: CMakeLists.txt
NearbyLayers/include/NearbyLayers/: Bluetooth.h
NearbyLayers/source/: Bluetooth.Linux.c  Bluetooth.Win.cpp
NearbyLayers/source/Bluetooth/: Linux.c
NearbyProto/: CMakeLists.txt
NearbyProto/definitions/: certificate_rpc.proto  rpc_resources.proto
NearbyRenderer/: CMakeLists.txt
NearbyRenderer/include/NearbyRenderer/: Guard.hpp  Renderer.hpp
NearbyRenderer/source/: Guard.cpp  Renderer.cpp
NearbyStorage/: CMakeLists.txt
NearbyStorage/include/NearbyStorage/: Certificate.h  CertificateManager.h  Crypto.h  HashMap.h  Metadata.h
NearbyStorage/source/: Certificate.c  CertificateManager.c  Crypto.c  HashMap.c  Metadata.c
Vendors/: CMakeLists.txt  ImGui.cmake
